--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "fill-db": "node database/seeds.js",
-    "start": "nodemon server/crudRoutes.js",
+    "startMongo": "nodemon server/mongoCrudRoutes.js",
+    "startPostgres": "nodemon server/postgresCrudRoutes.js",
     "db": "mysql -u root -p < schema.sql",
     "seeds": "node ./database/seed.js",
     "react-dev": "webpack -d --watch",
@@ -28,6 +29,7 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.4.3",
     "mysql": "^2.14.1",
+    "pg": "^7.8.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^15.6.1",
